--- a/Opdracht_overzicht/Overzicht/css/regeling.css
+++ b/Opdracht_overzicht/Overzicht/css/regeling.css
@@ -51,21 +51,21 @@ section.hoofdstuk > p.kop, section.divisie > p.kop_1 {
   line-height: 14pt;
   margin: 28pt 0mm 14pt 0mm;
 }
-section.paragraaf > p.kop, section.divisie > p.kop_2 {
+section.afdeling > p.kop, section.divisie > p.kop_2 {
   font-family: 'Tahoma', sans-serif;
   font-size: 11pt;
   font-weight: bold;
   line-height: 14pt;
   margin: 28pt 0mm 14pt 0mm;
 }
-section.subparagraaf > p.kop, section.divisie > p.kop_3 {
+section.paragraaf > p.kop, section.divisie > p.kop_3 {
   font-family: 'Tahoma', sans-serif;
   font-size: 9pt;
   font-weight: bold;
   line-height: 14pt;
   margin: 21pt 0mm 7pt 0mm;
 }
-section.divisie > p.kop_4 {
+section.subparagraaf > p.kop, section.divisie > p.kop_4 {
   font-family: 'Tahoma', sans-serif;
   font-size: 9pt;
   font-weight: bold;
